syntax = "proto3";
package bus;

message JwtVerificationRequest {
  string jwt = 1;
}
message JwtVerificationResponse {
  message JVRDetails {
    string id = 1;
    string email = 2;
    repeated string roles = 3;
  }
  bool ok = 1;
  optional JVRDetails details = 2;
}
