syntax = "proto3";
package live;

message JwtVerification {
  message Request {
    string jwt = 1;
  }
  message Response {
    message Details {
      string id = 1;
    }
    bool ok = 1;
    optional Details details = 2;
  }
}

message Authorize {
  message Request {
    string user_id = 1;
    string resource_id = 2;
    string action = 3;
  }
  message Response {
    bool permitted = 1;
    optional string reason = 2;
  }
}

message GivePermission {
  message Request {
    oneof type {
      string user_id = 1;
      string group_id = 2;
    }
    string action_regex = 3;
    string resource_regex = 4;
  }
  message Response {
  }
}

message AddPermissionGroup {
  message Permission {
    string action_regex = 1;
    string resource_regex = 2;
  }
  message Request {
    string name = 1;
    repeated Permission permissions = 2;
    repeated string extends = 3;
  }
  message Response {
    string id = 1;
  }
}

message UpdatePermissionGroup {
  message Request {
    string id = 1;
    optional bool active = 2;
  }
  message Response {}
}

message AddUserToGroup {
  message Request {
    string user_id = 1;
    repeated string group_ids = 2;
  }
  message Response {
  }
}
message RemoveUserFromGroup {
  message Request {
    string user_id = 1;
    repeated string group_ids = 2;
  }
  message Response {
  }
}
